# distributed_legder_kademlia

./: .gitignore  README.md
src/distributed_legder/: Cargo.toml
src/distributed_legder/src/: blockchain.rs  lib.rs  main.rs
src/distributed_legder/src/auctions/: ActionHandler.rs  Auction.rs  AuctionStandards.rs  action_handler.rs  auction.rs  auction_standards.rs  auction_ui.rs  bid.rs  mod.rs
src/distributed_legder/src/blockchain/: block.rs  blockchain.rs  blockchain_handler.rs  consensus.rs  miner.rs  mod.rs  transaction.rs
src/distributed_legder/src/constants/: fixed_sizes.rs  mod.rs  multicast_info_type.rs  utils.rs
src/distributed_legder/src/dht/: kademlia.rs  mod.rs  routing_table.rs  rpc.rs
src/distributed_legder/src/network/: client.rs  datagram.rs  key.rs  mod.rs  node.rs  rpc.rs  rpc_socket.rs  (+2 more)
src/distributed_legder/state_dumps/: self-node.json  self-node.json.plantuml  self.json  self.json.auction.json  self.json.auction.json.plantuml  self.json.blockchain.json  self.json.blockchain.json.plantuml  self.json.plantuml  test-bootstrap-1.json  test-bootstrap-1.json.plantuml  test-contact-1.json  test-contact-1.json.plantuml  test-contact-2.json  test-contact-2.json.plantuml  test-contact-3.json  test-contact-3.json.plantuml  test-contact-4.json  test-contact-4.json.plantuml  test-miner.json  test-miner.json.blockchain.json  test-miner.json.blockchain.json.plantuml  test-miner.json.plantuml  test-network-1.json  test-network-1.json.plantuml  test-network-2.json  test-network-2.json.plantuml  test-network-boot-1.json  test-network-boot-1.json.plantuml
(+9 files in other folders)
