[package]
name = "distributed_legder"
version = "0.1.0"
edition = "2021"
authors = [] # TODO: add authors

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
hex-serde = "0.1.0"
sha2 = "0.10.6"


env_logger = "0.10.0"
log = "0.4.17"